quick fix - join button wrapping

--- a/src/style/modules/_join.scss
+++ b/src/style/modules/_join.scss
@@ -57,6 +57,7 @@
         order: 0;
         flex-grow: 0;
         margin: 0px 10px 20px 0;
+        white-space: nowrap;
         img {
           margin-left: 10px;
         }
